@@ -3,6 +3,8 @@ wiLink 0.9.9b (UNRELEASED)
    - Display room subject and make it possible to change it.
    - When sending messages to a chat room, do not set "from".
    - Display image and profile links for room members.
+ * Miscellaneous:
+    - Fix parsing of the menu refresh interval.
 
 wiLink 0.9.9a (2010-09-16)
  * Do not join bookmarked rooms until we receive our nickname.
@@ -24,7 +26,7 @@ wiLink 0.9.9 (2010-09-16)
  * Sofware updates:
    - Download updates in the background and prompt user after download.
    - Do not re-download a software update if it already has a valid checksum.
- * Miscellanous:
+ * Miscellaneous:
    - Fix "open at login" option when multiple accounts are used.
    - Implement "open at login" option for freedesktop.org compliant desktops.
    - Make it possible to show / hide offline contacts.
